Make changes based on Issues DRY, KISS and JS best practices
JS
1.- Function too long, decompose in smaller functions
Split displayTaskCards function into createTaskCard and displayCards
2.- Optimize Loops
Not necessary as the refactoring from DRY, KISS eliminated the loops
3.-  Avoid mixing with other technologies
Change all style properties to use CSS classes
DRY, KISS
1.- Eliminate loop and use more semantic findIndex

modified:   dist/index.html
modified:   dist/main.js
modified:   src/app.js
modified:   src/index.html
modified:   src/style.css
modified:   src/tasksList.js

--- a/src/style.css
+++ b/src/style.css
@@ -89,7 +89,6 @@ hr {
 }
 
 .delete-btn {
-  display: none;
   cursor: pointer;
 }
 
@@ -112,6 +111,11 @@ footer {
   border: 3px solid blue;
 }
 
+.completed-task {
+  text-decoration: line-through;
+  color: lightgrey;
+}
+
 .clear-completed {
   text-align: center;
   color: darkgray;
@@ -120,6 +124,18 @@ footer {
   margin: 0 auto;
   display: block;
   cursor: pointer;
+}
+
+.hide {
+  display: none;
+}
+
+.drag-start {
+  opacity: 0.4;
+}
+
+.selected-row {
+  background-color: lightgoldenrodyellow;
 }
 
 .clear-completed:hover {
